# speakking

./: .gitignore  .vercelignore  Dockerfile  Dockerfile.ai  README.md  backend_test.py  design_guidelines.json  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt  test_download.py  vercel.json
.emergent/: emergent.yml
api/: DEPRECATED.md  index.py  pyproject.toml  requirements.txt
backend/: ai_server.py  requirements-deploy.txt  requirements.txt  server.py  test_cartesia.py  test_voice.py  wav2lip_client.py
backend/tests/: test_admin_features.py  test_structured_responses.py
backend/uploads/: 0816194c-41c7-4b3f-ac08-52fc9e024270_1- Can-Will-Should 1st Day.docx  (+1 more)
deploy/: nginx-speakking.conf
docker/wav2lip/: README.md  (+1 more)
docs/: EXTENDING.md  SUPABASE_ONLY.md  TEK_SUNUCU.md  VERCEL_DEPLOY.md
frontend/: craco.config.js  package-lock.json  package.json  parse_glb.py  tailwind.config.js
memory/: PRD.md
public/: asset-manifest.json  index.html
scripts/: run-ai.sh  run-production.sh  setup-wav2lip.sh  start-dev.sh  start-wav2lip.sh  supabase-remote.sh  vercel-build.sh
supabase/: add-cartesia-settings.sql  add-curriculum-categories.sql  add-curriculum-modules.sql  add-elevenlabs-settings.sql  apply-canli-500.sql  config.toml  fix-final-jwt.sql  fix-is-admin-volatile.sql  fix-live-read.sql  fix-nuclear.sql  fix-profiles-500.sql  fix-rls-500.sql  fix-rpc-bypass.sql  import-from-mongo.sql  schema.sql
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json
(+41 files in other folders)
