[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi==0.110.1", "motor==3.3.1", "pymongo==4.6.3", "certifi>=2024.2.2", "python-dotenv==1.2.2", "httpx==0.28.1", "pyjwt==2.12.1", "bcrypt==4.1.3", "pydantic==2.12.5", "email-validator==2.3.0", "edge-tts>=6.1.0", "requests==2.32.5", "python-multipart==0.0.22", "starlette==0.37.2", "openai==1.99.9" ]
requires-python = "~=3.12.0"
